# automatic_mixing

./: .gitignore  KAGGLE.md  README.md  pyproject.toml
configs/: combined.yaml  default.yaml  kaggle.yaml  smoke_test.yaml  spheres.yaml  spheres_prep.yaml  synthmix.yaml  synthmix_gen.yaml  synthsod.yaml  synthsod_prep.yaml
kaggle/: train_kaggle.ipynb
reports/: experiment_log.md  panning_fix_summary.md  training_metrics.csv
scripts/: dump_gain_pan.py  embedding_similarity.py  generate_synthmix.py  infer.py  plot_console.py  prepare_spheres.py  prepare_synthsod.py  train.py
src/automix/: anchors.py  audio_io.py  device.py  inference.py  train_loop.py
src/automix/data/: collate.py  manifest.py  mix_dataset.py
src/automix/losses/: mrstft.py
src/automix/model/: automix_model.py  context.py  mixer.py  mlp.py  vggish.py
src/automix/prep/: common.py  spheres.py  synthmix.py  synthsod.py
