[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automix"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    # Pinned: torchaudio removed torchaudio.prototype.pipelines.VGGISH
    # (which vggish.py depends on) in later releases; torch is pinned
    # to the matching compatible release.
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
